--- a/src/SSA.ipynb
+++ b/src/SSA.ipynb
@@ -10,15 +10,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.9-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "source": [
+    "\n",
     "# Shelf Space Allocation (SSA)"
    ],
    "cell_type": "markdown",
@@ -26,24 +32,300 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Name: gekko\nVersion: 0.2.8\nSummary: Machine learning and optimization for dynamic systems\nHome-page: https://github.com/BYU-PRISM/GEKKO\nAuthor: BYU PRISM Lab\nAuthor-email: john_hedengren@byu.edu\nLicense: MIT\nLocation: c:\\users\\sabbi\\anaconda3\\lib\\site-packages\nRequires: numpy, flask-cors, flask\nRequired-by: \n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # import gekko if installed\n",
+    "    from gekko import GEKKO\n",
+    "except:\n",
+    "    # install gekko if error on try\n",
+    "    !pip install gekko\n",
+    "    from gekko import GEKKO\n",
+    "\n",
+    "# package information\n",
+    "!pip show gekko\n",
+    "\n",
+    "# upgrade GEKKO to latest version\n",
+    "# !pip install --upgrade gekko\n",
+    "\n",
+    "\n",
+    "# other packages needed in this notebook\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n"
+   ]
+  },
+  {
+   "source": [
+    "## Nonlinear Programming Optimization\n",
+    "\n",
+    "$min \\; x_1 \\; x_4 \\; (x_1 + x_2 + x_3) + x_3$\n",
+    "\n",
+    "$s.t. \\; x_1,x_2,x_3,x_4 >= 25$\n",
+    "\n",
+    "$x_1^{2} + x_2^{2} + x_3^{2} + x_4^{2} = 40$\n",
+    "\n",
+    "$1 <= x_1, x_2, x_3, x_4 <= 5$\n",
+    "\n",
+    "with initial conditions:\n",
+    "$x_0 = (1,5,5,1)$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "apm 67.250.29.102_gk_model7 <br><pre> ----------------------------------------------------------------\n",
+      " APMonitor, Version 1.0.0\n",
+      " APMonitor Optimization Suite\n",
+      " ----------------------------------------------------------------\n",
+      " \n",
+      " \n",
+      " --------- APM Model Size ------------\n",
+      " Each time step contains\n",
+      "   Objects      :            0\n",
+      "   Constants    :            0\n",
+      "   Variables    :            5\n",
+      "   Intermediates:            0\n",
+      "   Connections  :            0\n",
+      "   Equations    :            3\n",
+      "   Residuals    :            3\n",
+      " \n",
+      " Number of state variables:              5\n",
+      " Number of total equations: -            2\n",
+      " Number of slack variables: -            1\n",
+      " ---------------------------------------\n",
+      " Degrees of freedom       :              2\n",
+      " \n",
+      " ----------------------------------------------\n",
+      " Steady State Optimization with APOPT Solver\n",
+      " ----------------------------------------------\n",
+      " \n",
+      " Iter    Objective  Convergence\n",
+      "    0  1.67676E+01  1.87500E-01\n",
+      "    1  2.04736E+01  4.88281E-02\n",
+      "    2  1.75530E+01  2.17630E-02\n",
+      "    3  1.70459E+01  9.65302E-03\n",
+      "    4  1.70140E+01  2.04419E-04\n",
+      "    5  1.70140E+01  4.22153E-08\n",
+      "    6  1.70140E+01  6.48259E-13\n",
+      "    7  1.70140E+01  6.48259E-13\n",
+      " Successful solution\n",
+      " \n",
+      " ---------------------------------------------------\n",
+      " Solver         :  APOPT (v1.0)\n",
+      " Solution time  :   1.420000000507571E-002 sec\n",
+      " Objective      :    17.0140172891559     \n",
+      " Successful solution\n",
+      " ---------------------------------------------------\n",
+      " \n",
+      "Results\n",
+      "x1: [1.0]\n",
+      "x2: [4.742999637]\n",
+      "x3: [3.8211499845]\n",
+      "x4: [1.3794082931]\n",
+      "Objective: 17.014017289\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gekko import GEKKO\n",
+    "m = GEKKO() # Initialize gekko\n",
+    "# Use APOPT solver: IPOPT solver (default = 3)\n",
+    "m.options.SOLVER=1  # APOPT is an MINLP solver\n",
+    "\n",
+    "# optional solver settings with APOPT\n",
+    "m.solver_options = ['minlp_maximum_iterations 500', \\\n",
+    "                    # minlp iterations with integer solution\n",
+    "                    'minlp_max_iter_with_int_sol 10', \\\n",
+    "                    # treat minlp as nlp\n",
+    "                    'minlp_as_nlp 0', \\\n",
+    "                    # nlp sub-problem max iterations\n",
+    "                    'nlp_maximum_iterations 50', \\\n",
+    "                    # 1 = depth first, 2 = breadth first\n",
+    "                    'minlp_branch_method 1', \\\n",
+    "                    # maximum deviation from whole number\n",
+    "                    'minlp_integer_tol 0.05', \\\n",
+    "                    # covergence tolerance\n",
+    "                    'minlp_gap_tol 0.01']\n",
+    "\n",
+    "# Initialize variables\n",
+    "x1 = m.Var(value=1,lb=1,ub=5)\n",
+    "x2 = m.Var(value=5,lb=1,ub=5)\n",
+    "x3 = m.Var(value=5,lb=1,ub=5,integer=False)\n",
+    "x4 = m.Var(value=1,lb=1,ub=5,integer=False)\n",
+    "\n",
+    "# Defining Constraints Equations\n",
+    "m.Equation(x1*x2*x3*x4>=25)\n",
+    "m.Equation(x1**2+x2**2+x3**2+x4**2==40)\n",
+    "\n",
+    "# Defining objective function\n",
+    "m.Obj(x1*x4*(x1+x2+x3)+x3) # Objective\n",
+    "m.options.IMODE = 3 # Steady state optimization\n",
+    "\n",
+    "m.solve(disp=True) # Solve\n",
+    "print('Results')\n",
+    "print('x1: ' + str(x1.value))\n",
+    "print('x2: ' + str(x2.value))\n",
+    "print('x3: ' + str(x3.value))\n",
+    "print('x4: ' + str(x4.value))\n",
+    "print('Objective: ' + str(m.options.objfcnval))"
+   ]
+  },
+  {
+   "source": [
+    "## Nonlinear Mixed Integer Programming Optimization\n",
+    "\n",
+    "$min \\; x_1 \\; x_4 \\; (x_1 + x_2 + x_3) + x_3$\n",
+    "\n",
+    "$s.t. \\; x_1,x_2,x_3,x_4 >= 25$\n",
+    "\n",
+    "$x_1^{2} + x_2^{2} + x_3^{2} + x_4^{2} = 40$\n",
+    "\n",
+    "$1 <= x_1, x_2, x_3, x_4 <= 5$\n",
+    "\n",
+    "$x_3 \\;and \\;x_4 \\;are \\;integers$\n",
+    "\n",
+    "with initial conditions:\n",
+    "$x_0 = (1,5,5,1)$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "apm 67.250.29.102_gk_model4 <br><pre> ----------------------------------------------------------------\n",
+      " APMonitor, Version 1.0.0\n",
+      " APMonitor Optimization Suite\n",
+      " ----------------------------------------------------------------\n",
+      " \n",
+      " \n",
+      " --------- APM Model Size ------------\n",
+      " Each time step contains\n",
+      "   Objects      :            0\n",
+      "   Constants    :            0\n",
+      "   Variables    :            5\n",
+      "   Intermediates:            0\n",
+      "   Connections  :            0\n",
+      "   Equations    :            3\n",
+      "   Residuals    :            3\n",
+      " \n",
+      " Number of state variables:              5\n",
+      " Number of total equations: -            2\n",
+      " Number of slack variables: -            1\n",
+      " ---------------------------------------\n",
+      " Degrees of freedom       :              2\n",
+      " \n",
+      " ----------------------------------------------\n",
+      " Steady State Optimization with APOPT Solver\n",
+      " ----------------------------------------------\n",
+      "Iter:     1 I:  0 Tm:      0.00 NLPi:    7 Dpth:    0 Lvs:    3 Obj:  1.70E+01 Gap:       NaN\n",
+      "--Integer Solution:   1.75E+01 Lowest Leaf:   1.70E+01 Gap:   3.00E-02\n",
+      "Iter:     2 I:  0 Tm:      0.00 NLPi:    5 Dpth:    1 Lvs:    2 Obj:  1.75E+01 Gap:  3.00E-02\n",
+      "Iter:     3 I:  0 Tm:      0.00 NLPi:    6 Dpth:    1 Lvs:    2 Obj:  1.75E+01 Gap:  3.00E-02\n",
+      "--Integer Solution:   1.75E+01 Lowest Leaf:   1.70E+01 Gap:   3.00E-02\n",
+      "Iter:     4 I:  0 Tm:      0.00 NLPi:    6 Dpth:    2 Lvs:    1 Obj:  2.59E+01 Gap:  3.00E-02\n",
+      "Iter:     5 I:  0 Tm:      0.00 NLPi:    5 Dpth:    1 Lvs:    0 Obj:  2.15E+01 Gap:  3.00E-02\n",
+      " No additional trial points, returning the best integer solution\n",
+      " Successful solution\n",
+      " \n",
+      " ---------------------------------------------------\n",
+      " Solver         :  APOPT (v1.0)\n",
+      " Solution time  :   1.630000001750886E-002 sec\n",
+      " Objective      :    17.5322673012512     \n",
+      " Successful solution\n",
+      " ---------------------------------------------------\n",
+      " \n",
+      "Results\n",
+      "x1: [1.3589086474]\n",
+      "x2: [4.5992789966]\n",
+      "x3: [4.0]\n",
+      "x4: [1.0]\n",
+      "Objective: 17.532267301\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gekko import GEKKO\n",
+    "m = GEKKO() # Initialize gekko\n",
+    "m.options.SOLVER=1  # APOPT is an MINLP solver\n",
+    "\n",
+    "# optional solver settings with APOPT\n",
+    "m.solver_options = ['minlp_maximum_iterations 500', \\\n",
+    "                    # minlp iterations with integer solution\n",
+    "                    'minlp_max_iter_with_int_sol 10', \\\n",
+    "                    # treat minlp as nlp\n",
+    "                    'minlp_as_nlp 0', \\\n",
+    "                    # nlp sub-problem max iterations\n",
+    "                    'nlp_maximum_iterations 50', \\\n",
+    "                    # 1 = depth first, 2 = breadth first\n",
+    "                    'minlp_branch_method 1', \\\n",
+    "                    # maximum deviation from whole number\n",
+    "                    'minlp_integer_tol 0.05', \\\n",
+    "                    # covergence tolerance\n",
+    "                    'minlp_gap_tol 0.01']\n",
+    "\n",
+    "# Initialize variables\n",
+    "x1 = m.Var(value=1,lb=1,ub=5)\n",
+    "x2 = m.Var(value=5,lb=1,ub=5)\n",
+    "# Integer constraints for x3 and x4\n",
+    "x3 = m.Var(value=5,lb=1,ub=5,integer=True)\n",
+    "x4 = m.Var(value=1,lb=1,ub=5,integer=True)\n",
+    "# Equations\n",
+    "m.Equation(x1*x2*x3*x4>=25)\n",
+    "m.Equation(x1**2+x2**2+x3**2+x4**2==40)\n",
+    "m.Obj(x1*x4*(x1+x2+x3)+x3) # Objective\n",
+    "\n",
+    "m.solve(disp=True) # Solve\n",
+    "print('Results')\n",
+    "print('x1: ' + str(x1.value))\n",
+    "print('x2: ' + str(x2.value))\n",
+    "print('x3: ' + str(x3.value))\n",
+    "print('x4: ' + str(x4.value))\n",
+    "print('Objective: ' + str(m.options.objfcnval))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "#import math\n",
-    "\n",
-    "#from math import isnan\n",
-    "\n",
-    "from pulp import *\n",
-    "\n",
-    "#from collections import Counter\n",
-    "\n",
-    "#from more_itertools import unique_everseen"
-   ]
+   "source": []
   }
  ]
 }
