--- a/src/SSA.ipynb
+++ b/src/SSA.ipynb
@@ -52,27 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "43900.6\n44627.5\n4978\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "4978"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Day 0: Mean Median Mode:\n",
     "\n",
@@ -747,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,17 +770,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[2, 3]\nelapsed time is 0.000905 seconds. \n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Two Sums: LeetCode\n",
     "\n",
@@ -831,17 +805,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[2, 3]\nelapsed time is 0.00071 seconds. \n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Two Sums: LeetCode\n",
     "\n",
@@ -920,17 +886,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "elapsed time is 22.350373 seconds. \n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import timeit\n",
@@ -1148,51 +1106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "29 FizzBuzz 31 32 Fizz 34 Buzz Fizz 37 38 Fizz Buzz 41 Fizz 43 44 FizzBuzz 46 47 Fizz 49 Buzz Fizz 52 53 Fizz Buzz 56 Fizz 58 59 FizzBuzz 61 62 Fizz 64 Buzz Fizz 67 68 Fizz Buzz 71 Fizz 73 74 FizzBuzz 76 77 Fizz 79 Buzz Fizz 82 83 Fizz Buzz 86 Fizz 88 89\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 2\n",
-    "N = [int(x) for x in input().split()] \n",
-    "N = N[0:n]\n",
-    "a = list(range(N[0],N[1]+1,1))\n",
-    "d = [0] * len(a)\n",
-    "\n",
-    "idx1 =  [a.index(y) for y in [x for x in a if (x%5 == 0) & (x%3 == 0)]]\n",
-    "idx2 =  [a.index(y) for y in [x for x in a if (x%5 != 0) & (x%3 == 0)]]\n",
-    "idx3 =  [a.index(y) for y in [x for x in a if (x%5 == 0) & (x%3 != 0)]]\n",
-    "\n",
-    "for x in idx1:\n",
-    "    a[x] = 'FizzBuzz'\n",
-    "for x in idx2:\n",
-    "    a[x] = 'Fizz'\n",
-    "for x in idx3:\n",
-    "    a[x] = 'Buzz'\n",
-    "\n",
-    "print(*a)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "29 FizzBuzz 31 32 33 34 FizzBuzz 36 37 38 39 FizzBuzz 41 42 43 44 FizzBuzz 46 47 48 49 FizzBuzz 51 52 53 54 FizzBuzz 56 57 58 59 FizzBuzz 61 62 63 64 FizzBuzz 66 67 68 69 FizzBuzz 71 72 73 74 FizzBuzz 76 77 78 79 FizzBuzz 81 82 83 84 FizzBuzz 86 87 88 89\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 2\n",
     "N = [int(x) for x in input().split()] \n",
@@ -1207,12 +1130,105 @@
     "        a.append(\"Fizz\")\n",
     "    else:\n",
     "        a.append(j)\n",
-    "print(*a)"
+    "#print(*a)\n",
+    "print(*a, sep=\"\\n\")"
+   ]
+  },
+  {
+   "source": [
+    "# HackerEarth: Code Monk:\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem 01: Monk and Rotation:\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for i in range(0,T):\n",
+    "    N,K = [int(x) for x in input().split()]\n",
+    "    A = [int(x) for x in input().split()]\n",
+    "    # Error check:\n",
+    "    if (T<1 & T>20):\n",
+    "        raise ValueError('T has to be in between 1 and 20.')\n",
+    "    elif (N<1 & N>1e+05):\n",
+    "        raise ValueError('N has to be in between 1 and 10^5.')\n",
+    "    elif (K<0 & K>1e+06):\n",
+    "        raise ValueError('K has to be in between 0 and 10^6.')\n",
+    "    elif (any([x<0 for x in A]) & any([x>1e+06 for x in A])):\n",
+    "        raise ValueError('Elements of A has to be in between 0 and 10^6.')\n",
+    "    else:\n",
+    "        r = K%N\n",
+    "        b = [(j + (N-r))%N for j in range(0,N)]\n",
+    "        print(*[A[i] for i in b])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem: Fibonacci and GCD:\n",
+    "\n",
+    "def my_gcd(p1,p2):\n",
+    "    if p1==0:\n",
+    "        return p2\n",
+    "    elif p2==0:\n",
+    "        return p1\n",
+    "    else:\n",
+    "        return my_gcd(p2, p1%p2)\n",
+    "\n",
+    "def my_gcd_array(A):\n",
+    "    c=A[0]\n",
+    "    for i in range(1, len(A)):\n",
+    "        c = my_gcd(c, A[i])\n",
+    "    return c\n",
+    "\n",
+    "\n",
+    "def my_Fibo(n):\n",
+    "    a=1\n",
+    "    b=1\n",
+    "    if (n==1)|(n==2):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        count = n-2\n",
+    "        i=0\n",
+    "        while i<count:\n",
+    "            c = a + b\n",
+    "            a = b\n",
+    "            b = c\n",
+    "            i+=1\n",
+    "        return c\n",
+    "\n",
+    "\n",
+    "N = int(input())\n",
+    "q = [0] * N\n",
+    "for i in range(0,N):\n",
+    "    q[i] = int(input())\n",
+    "\n",
+    "b = [my_Fibo(x) for x in q]\n",
+    "print(my_gcd_array(b))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1224,8 +1240,9 @@
     }
    ],
    "source": [
+    "# Problem: The same old FizzBuzz: BruteForce method\n",
     "n = 2\n",
-    "N = [int(x) for x in input().split()] \n",
+    "N = [int(float(x)) for x in input().split()] \n",
     "N = N[0:n]\n",
     "a = list()\n",
     "for j in list(range(N[0],N[1]+1)):\n",
@@ -1242,24 +1259,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "29 FizzBuzz 31 32 Fizz 34 Buzz Fizz 37 38 Fizz Buzz 41 Fizz 43 44 FizzBuzz 46 47 Fizz 49 Buzz Fizz 52 53 Fizz Buzz 56 Fizz 58 59 FizzBuzz 61 62 Fizz 64 Buzz Fizz 67 68 Fizz Buzz 71 Fizz 73 74 FizzBuzz 76 77 Fizz 79 Buzz Fizz 82 83 Fizz Buzz 86 Fizz 88 89\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem: The same old FizzBuzz: List Comprehension method\n",
+    "n = 2\n",
+    "N = [int(float(x)) for x in input().split()] \n",
+    "print(*[\"FizzBuzz\" if x%15 == 0 else \"Fizz\" if x%3 == 0 else \"Buzz\" if x % 5 == 0 else x for x in range(N[0],N[1]+1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "True"
+       "[29, 89]"
       ]
      },
      "metadata": {},
-     "execution_count": 127
+     "execution_count": 5
     }
    ],
-   "source": [
-    "j = 3\n",
-    "((j%3==0) & (j%5!=0))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
